--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgresql:
     image: postgres:latest
@@ -23,12 +21,14 @@ services:
     build: .
     container_name: car-booking_container
     depends_on:
-      postgresql:
-        condition: service_healthy
+      - postgresql
+    ports:
+      - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/car_booking
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgresql:5432/car_booking
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 1234567
+      SPRING_PROFILES_ACTIVE: docker
     restart: unless-stopped
 
 volumes:
