--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -10,9 +10,32 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 server.port=8080
 
-jwt.secret=${JWT_SECRET}
-
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
 spring.jpa.hibernate.ddl-auto=validate
+
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017/car_features}
+
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
+management.endpoint.health.show-details=always
+
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST:localhost}
+spring.data.redis.port=6379
+
+
+
+
+spring.config.import=vault://
+spring.cloud.vault.enabled=true
+
+spring.cloud.vault.uri=${SPRING_CLOUD_VAULT_URI:http://localhost:8200}
+
+spring.cloud.vault.authentication=TOKEN
+spring.cloud.vault.token=${SPRING_CLOUD_VAULT_TOKEN:my-root-token}
+
+spring.cloud.vault.kv.enabled=true
+spring.cloud.vault.kv.backend=secret
+spring.cloud.vault.kv.application-name=car-booking-app
+
+spring.cloud.vault.fail-fast=true
